# HW2_MATRIX_CALC

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md
.github/workflows/: CI.yml
demo/: main.cpp
project/: CMakeLists.txt  report.txt
project/include/: m_matrix.h  m_vector.h  slice.h
project/src/: m_matrix.cpp  m_vector.cpp  main.cpp  slice.cpp
scripts/: coverage.sh  format.sh  linters.sh  valgrind.sh
tests/: CMakeLists.txt  main.cpp  test_matrix.cpp  test_vector.cpp  vector_test.cpp
